--- a/packages/queued-request-controller/package.json
+++ b/packages/queued-request-controller/package.json
@@ -25,13 +25,14 @@
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/queued-request-controller",
     "publish:preview": "yarn npm publish --tag preview",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:clean": "jest --clearCache"
   },
   "dependencies": {
-    "@metamask/approval-controller": "^3.5.1",
-    "@metamask/base-controller": "^3.2.1",
-    "@metamask/controller-utils": "^4.3.2",
-    "@metamask/network-controller": "^12.1.2",
+    "@metamask/approval-controller": "^4.0.0",
+    "@metamask/base-controller": "^3.2.3",
+    "@metamask/controller-utils": "^5.0.2",
+    "@metamask/network-controller": "^14.0.0",
     "@metamask/selected-network-controller": "^2.0.1",
     "@metamask/swappable-obj-proxy": "^2.1.0",
     "json-rpc-engine": "^6.1.0"
@@ -51,9 +52,9 @@
     "typescript": "~4.6.3"
   },
   "peerDependencies": {
-    "@metamask/approval-controller": "^3.5.1",
-    "@metamask/network-controller": "^12.1.2",
-    "@metamask/selected-network-controller": "^1.0.1"
+    "@metamask/approval-controller": "^4.0.0",
+    "@metamask/network-controller": "^14.0.0",
+    "@metamask/selected-network-controller": "^2.0.1"
   },
   "engines": {
     "node": ">=16.0.0"
