--- a/packages/polling-controller/package.json
+++ b/packages/polling-controller/package.json
@@ -34,6 +34,7 @@
     "@metamask/network-controller": "^14.0.0",
     "@metamask/utils": "^8.1.0",
     "@types/uuid": "^8.3.0",
+    "fast-json-stable-stringify": "^2.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
