--- a/packages/ramps-controller/package.json
+++ b/packages/ramps-controller/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@metamask/base-controller": "^9.0.0",
+    "@metamask/controller-utils": "^11.8.0",
     "@metamask/messenger": "^0.3.0"
   },
   "devDependencies": {
