--- a/packages/ramps-controller/tsconfig.json
+++ b/packages/ramps-controller/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "../../tsconfig.packages.json",
   "compilerOptions": {
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "paths": {
+      "@metamask/*": ["../*/src"]
+    }
   },
   "references": [{ "path": "../base-controller" }, { "path": "../messenger" }],
-  "include": ["../../types", "./src"],
-  "paths": {
-    "@metamask/*": ["../*/src"]
-  }
+  "include": ["../../types", "./src"]
 }
