--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
   "simple-git-hooks": {
     "pre-push": "yarn lint"
   },
+  "resolutions": {
+    "elliptic@6.5.4": "^6.5.7",
+    "fast-xml-parser@^4.3.4": "^4.4.1",
+    "ws@7.4.6": "^7.5.10"
+  },
   "devDependencies": {
     "@babel/core": "^7.23.5",
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
