--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,11 @@
 {
+  /**
+   * This configuration is used by the `build` script in `package.json`.
+   *
+   * This is just used as a way to request builds for all packages. `tsconfig.base.json` is not
+   * extended here because the `tsconfig.build.json` file referenced for each package already
+   * (indirectly) extends it.
+   */
   "references": [
     { "path": "./packages/account-tree-controller/tsconfig.build.json" },
     { "path": "./packages/accounts-controller/tsconfig.build.json" },
@@ -8,6 +15,7 @@
     { "path": "./packages/app-metadata-controller/tsconfig.build.json" },
     { "path": "./packages/approval-controller/tsconfig.build.json" },
     { "path": "./packages/assets-controllers/tsconfig.build.json" },
+    { "path": "./packages/core-backend/tsconfig.build.json" },
     { "path": "./packages/base-controller/tsconfig.build.json" },
     { "path": "./packages/bridge-controller/tsconfig.build.json" },
     { "path": "./packages/bridge-status-controller/tsconfig.build.json" },
@@ -16,7 +24,6 @@
     { "path": "./packages/claims-controller/tsconfig.build.json" },
     { "path": "./packages/composable-controller/tsconfig.build.json" },
     { "path": "./packages/controller-utils/tsconfig.build.json" },
-    { "path": "./packages/core-backend/tsconfig.build.json" },
     { "path": "./packages/delegation-controller/tsconfig.build.json" },
     { "path": "./packages/earn-controller/tsconfig.build.json" },
     { "path": "./packages/eip-5792-middleware/tsconfig.build.json" },
