--- a/packages/config-registry-controller/package.json
+++ b/packages/config-registry-controller/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
     "@metamask/auto-changelog": "^3.4.4",
+    "@metamask/network-controller": "workspace:*",
     "@ts-bridge/cli": "^0.6.4",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
