--- a/packages/config-registry-controller/tsconfig.json
+++ b/packages/config-registry-controller/tsconfig.json
@@ -7,6 +7,7 @@
     { "path": "../base-controller" },
     { "path": "../controller-utils" },
     { "path": "../messenger" },
+    { "path": "../network-controller" },
     { "path": "../polling-controller" }
   ],
   "include": ["../../types", "./src"]
