--- a/packages/ramps-controller/package.json
+++ b/packages/ramps-controller/package.json
@@ -40,6 +40,7 @@
     "build:docs": "typedoc",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/ramps-controller",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/ramps-controller",
+    "dev": "node dev-watch.js",
     "publish:preview": "yarn npm publish --tag preview",
     "since-latest-release": "../../scripts/since-latest-release.sh",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --reporters=jest-silent-reporter",
