--- a/packages/remote-feature-flag-controller/package.json
+++ b/packages/remote-feature-flag-controller/package.json
@@ -52,6 +52,7 @@
     "@metamask/controller-utils": "^11.16.0",
     "@metamask/messenger": "^0.3.0",
     "@metamask/utils": "^11.8.1",
+    "@noble/hashes": "^1.8.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
